--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>HTML/CSS1</h1>
-    <a href= "diary.html">diary </a> 
-    <a href= "diary.html">vizbor </a> 
+    <a href= "hw1/diary.html">diary </a> <br>
+    <a href= "hw1/diary.html">vizbor </a> 
 
     
 </body>
