--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>HTML/CSS1</h1>
     <a href= "hw1/diary.html">diary </a> <br>
-    <a href= "hw1/diary.html">vizbor </a> 
+    <a href= "hw1/vizbor.html">vizbor </a> 
 
     
 </body>
