--- a/hw1/vizbor.html
+++ b/hw1/vizbor.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p> и тут будет дз ))</p>
+    <h1>Юрий Визбор</h1>
+    <h2>Вечно студент</h2>
+    <a href="vechno_student.html">читать сначала</a>
+    <a href="vechno_student.html">читать с последнего абзаца</a>
 </body>
 </html>
