--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>HTML/CSS1</h1>
-    <a href= "hw1/diary.html">diary </a> <br>
+    <a href= "hw1/diary1.html">diary </a> <br>
     <a href= "hw1/vizbor.html">vizbor </a> 
 
     
