--- a/hw1/diary1.html
+++ b/hw1/diary1.html
@@ -6,13 +6,13 @@
 </head>
 <body>
   <h1 align="center"> Дневник партизана </h1>
-  <img src="/star.gif"> 
+  <img src="/star.gif" alt="star"> 
   <ol>
     <li><strong>Вторник.</strong> Выбили <a target="_blank" title="немецкая википедия" href= "https://ru.wikipedia.org/wiki/Немцы">немцев</a> с опушки. Засели в доме лесника.</li>
     <li><strong>Среда.</strong> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
-    <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в доме лесника. Курим «Беломор».</li>
+    <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZmZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=" alt="home"> лесника. Курим «Беломор».</li>
     <li><strong>Пятница.</strong> Вернулся лесник и всех выгнал.</li>
   </ol>
-  <p> &copy бородатый <a target="_blank" title="анекдоты" href="http://anekdotov.net/anekdot/"> анекдот </a>  </p>
+  <p> &copy; бородатый <a target="_blank" title="анекдоты" href="http://anekdotov.net/anekdot/"> анекдот </a>  </p>
 </body>
 </html>
