--- a/hw1/diary1.html
+++ b/hw1/diary1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Заголовок страницы</title>
+<title>Дневник партизана</title>
 </head>
 <body>
   <h1 align="center"> Дневник партизана </h1>
