--- a/hw1/diary1.html
+++ b/hw1/diary1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1 align="center"> Дневник партизана </h1>
-  <img src="/star.gif"> 
+  <img src="star.gif" alt="star"> 
   <ol>
     <li><strong>Вторник.</strong> Выбили <a target="_blank" title="немецкая википедия" href= "https://ru.wikipedia.org/wiki/Немцы">немцев</a> с опушки. Засели в доме лесника.</li>
     <li><strong>Среда.</strong> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
