--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML/CSS1</h1>
+    <h2>HTML/CSS 1</h2>
     <a href= "hw1/diary1.html">diary </a> <br>
     <a href= "hw1/vizbor.html">vizbor </a> 
+    <h2>Childbook 2</h2>
+    <a href="hw2/childbook.html">Child book</a>
 
     
 </body>
