--- a/hw2/childbook.html
+++ b/hw2/childbook.html
@@ -7,13 +7,13 @@
   <title>CHILDBOOK</title>
 </head>
 <body>
-  <img src="car1.gif" alt="car">
+  <img src="car1.gif" width="240" height="204" alt="car">
   <!--малоцветное изображение, двухцветный градиент -->
   <p> За рулём сижу довольный — <br>
     Ездить просто и легко!<br>
     Только руль чуть–чуть огромный<br>
     И педали далеко.</p>
-  <img src="poezd2.png" alt="poezd">
+  <img src="poezd2.png" width="198" height="149" alt="poezd">
   <!-- полноцветное изображение,потеря качества недопустима-->
   <p>Мне купили <strong>паровозик,</strong> <br>
     Сразу два вагона возит.<br>
@@ -21,7 +21,7 @@
     За собой везёт вагон.<br>
     Вот бы мне в нём прокатиться,<br>
     Только жаль—не поместиться.</p>
-  <img src="ricunok2.png" alt="kraski">
+  <img src="ricunok1.gif" width="241" height="276" alt="kraski">
   <!--не jpeg тк может понадобиться прозрачность, малоцветное изображение -->
   <p>Нарисую я в альбоме<br>
     <em>Голубое</em> море, <br>
