add fonts to pages

--- a/hw3/font/fonts.html
+++ b/hw3/font/fonts.html
@@ -5,18 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="fonts.css">
 <link rel="stylesheet" href="../styles.css">
+<link rel="stylesheet" href="font.css">
   <title>Fonts</title>
 </head>
 <body>
   <P>
-    О, весна без конца и без краю —<br>
+О, весна без конца и без краю —<br>
 Без конца и без краю мечта!<br>
 Узнаю тебя, жизнь! Принимаю!<br>
 И приветствую звоном щита!<br></P>
 <br>
-<p>Принимаю тебя, неудача,<br>
+<p style="font-family: 'FiraSans-Black';">
+Принимаю тебя, неудача,<br>
 И удача, тебе мой привет!<br>
 В заколдованной области плача,<br>
 В тайне смеха — позорного нет!<br></p>
@@ -26,7 +27,8 @@
 Чтоб мои воспаленные взоры<br>
 Раздражала, пьянила весна!<br></p>
 <br>
-<p style="font-family: 'FiraSans-Black';">Принимаю пустынные веси!<br>
+<p style="font-family: 'FiraSans-Black';">
+Принимаю пустынные веси!<br>
 И колодцы земных городов!<br>
 Осветленный простор поднебесий<br>
 И томления рабьих трудов!<br></p>
