--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href= "hw1/vizbor.html">vizbor </a> 
     <h2>Childbook 2</h2>
     <a href="hw2/childbook.html">Child book</a>
+    <h2>Fonts 3</h2>
+    <a href="hw3/font/fonts.html">Fonts</a>
 
     
 </body>
