--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <h2>HTML/CSS 1</h2>
-    <a href= "hw1/diary1.html">diary </a> <br>
-    <a href= "hw1/vizbor.html">vizbor </a> 
+    <a href= "hw1/diary1.html">diary </a> <span><strong>- checked</strong></span> <br>
+    <a href= "hw1/vizbor.html">vizbor </a> <span><strong>- checked</strong></span><br>
+    <a href= "hw1/1.2valid.html">1.2+ valid</a>
     <h2>Childbook 2</h2>
-    <a href="hw2/childbook.html">Child book</a>
+    <a href="hw2/childbook.html">Child book </a> <span><strong>- checked</strong></span>
     <h2>Fonts 3</h2>
-    <a href="hw3/font/fonts.html">Fonts</a>
+    <a href="hw3/font/fonts.html">Fonts</a> <span><strong>- checked</strong></span>
 
     
 </body>
