--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h2>Childbook 2</h2>
     <a href="hw2/childbook.html">Child book </a> <span><strong>- checked</strong></span>
     <h2>Fonts 3</h2>
-    <a href="hw3/font/fonts.html">Fonts</a> <span><strong>- checked</strong></span>
+    <a href="hw3/font/fonts.html">Fonts</a> <span><strong>- checked</strong></span><br>
+    <a href="hw3/safe.html">Safe</a>
     <h2>HTML/CSS 4</h2>
     <a href="hw4/560.html">5.60</a>
 
