--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h2>Fonts 3</h2>
     <a href="hw3/font/fonts.html">Fonts</a> <span><strong>- checked</strong></span><br>
     <a href="hw3/safe.html">Safe</a>
+    <a href="hw3/font.html">Font</a>
     <h2>HTML/CSS 4</h2>
     <a href="hw4/560.html">5.60</a>
 
