--- a/hw4/ramka.html
+++ b/hw4/ramka.html
@@ -10,13 +10,14 @@
   <div style="background: url('y.png') repeat-y">
   <div style="background: url('y.png') repeat-y right top ">
   <div style="background: url('x.png') repeat-x">
-  <div style="background: url('x.png') repeat-x left bottom ">
+  <div style="background: url('x.png') repeat-x bottom ">
   <div style="background: url('bottomleft.png') left bottom no-repeat">
   <div style="background: url('topleft.png') left top no-repeat ">
   <div style="background: url('topright.png') right top no-repeat">
   <div style="background: url('bottomright.png') right bottom no-repeat">
   
-  <div style="padding: 50px;font-size: 15px;">  Бериллий — элемент главной подгруппы второй группы, второго периода периодической системы химических элементов Д. И. Менделеева, с атомным номером 4. Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент. Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
+  <div style="padding: 50px;font-size: 15px; width: 600px;">  Бериллий — элемент главной подгруппы второй группы, второго периода периодической системы химических элементов Д. И. Менделеева, с атомным номером 4. Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент. Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
+  </div>
   </div>
   </div>
   </div>
