--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <a href="hw3/safe.html">Safe</a><br>
     <a href="hw3/font.html">Font</a>
     <h2>HTML/CSS 4</h2>
-    <a href="hw4/560.html">5.60</a>
+    <a href="hw4/560.html">5.60</a><br>
+    <a href="hw4/ramka.html">Ramka</a>
 
     
 </body>
