--- a/hw5/makettable.html
+++ b/hw5/makettable.html
@@ -7,13 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-
-  <div style="text-align: center;padding: 20px; background-color: lightskyblue;height: 45px; "> <span STYLE="color: blue; font-weight: bolder; font-size: x-large;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</span></div>
-  <div>
-    <div style="width:25%;
-    background-color: rgba(255, 255, 27, 0.712); 
-    float: left; overflow: hidden;">Виды спорта: 
-    <ul>
+  <table border=1 style="border-collapse: collapse;">
+   <tr>
+    <td colspan=2 style="text-align: center;padding: 20px; background-color: lightskyblue;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</td>
+   </tr>
+   <tr>
+    <td style="width: 15%; background-color: rgba(255, 255, 20, 0.678);">
+      <p>Виды спорта: </p>
+      <ul>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >конькобежный спорт</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >биатлон</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >футбол</a></li>
@@ -24,19 +25,18 @@
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >синхронное плавание</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >шахматы</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >шашки</a></li>
-    </ul>
-  </div>
-
-    <div style="width:75%; padding-left: 140px; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding-left: 260px;"> 
-      <h2 style="text-align:center ;">Футбол</h2>
+    </ul></td>
+    <td style="background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right;"> <h2 style="text-align:center ;">Футбол</h2>
     
       <img src="people.png" style="float: left;">
       <p>Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта в мире.</p>
-    <p>Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p>
-  <div style="clear: both; "></div>
-  </div>
-  <div style="clear: both; "></div>
-  </div>
-  <div style="text-align: center;padding: 20px; background-color: lightskyblue; height: 60px; clear: both;"><P STYLE="color: blue; font-weight: bolder; font-size: x-large;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</P></div>
+    <p>Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p></td>
+   </tr>
+   <TR>
+    <td colspan=2 style="text-align: center;padding: 20px; background-color: lightskyblue;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</td>
+   </TR>
+  
+  
+  </table>
 </body>
 </html>
