--- a/hw5/makettable.html
+++ b/hw5/makettable.html
@@ -9,7 +9,7 @@
 <body>
   <table border=1 style="border-collapse: collapse;">
    <tr>
-    <td colspan=2 style="text-align: center;padding: 20px; background-color: lightskyblue;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</td>
+    <td colspan=2 style="text-align: center;padding: 20px; background-color: lightskyblue;color: blue;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</td>
    </tr>
    <tr>
     <td style="width: 15%; background-color: rgba(255, 255, 20, 0.678);">
@@ -33,7 +33,7 @@
     <p>Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p></td>
    </tr>
    <TR>
-    <td colspan=2 style="text-align: center;padding: 20px; background-color: lightskyblue;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</td>
+    <td colspan=2 style="text-align: center;padding: 20px; background-color: lightskyblue;color: blue;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</td>
    </TR>
   
   
