--- a/hw5/maketdiv.html
+++ b/hw5/maketdiv.html
@@ -25,18 +25,22 @@
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >шахматы</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >шашки</a></li>
     </ul>
-  </div>
+
+    </div>
 
     <div style="width:75%; padding-left: 140px; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding-left: 260px;"> 
-      <h2 style="text-align:center ;">Футбол</h2>
+      <h2 style="text-align:center ; margin: 0px;">Футбол</h2>
     
       <img src="people.png" style="float: left;">
       <p>Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта в мире.</p>
     <p>Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p>
   <div style="clear: both; "></div>
   </div>
-  <div style="clear: both; "></div>
+  <div style="clear: both; height: 5px; background-color: black;"></div>
   </div>
-  <div style="text-align: center;padding: 20px; background-color: lightskyblue; height: 60px; clear: both;"><P STYLE="color: blue; font-weight: bolder; font-size: x-large;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</P></div>
+  
+  <div style="text-align: center;padding: 20px; background-color: lightskyblue; height: 60px; clear: both;"><P STYLE="color: blue; font-weight: bolder; font-size: x-large;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</P>
+  
+  </div>
 </body>
 </html>
