--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <h2>HTML/CSS 4</h2>
     <a href="hw4/560.html">5.60</a><br>
     <a href="hw4/ramka.html">Ramka</a>
+    <a href="hw4/nocut.html">No cut</a>
+    <h2>HTML/CSS 5</h2>
+    <a href="hw5/maketdiv.html">Maket Div</a><br>
+    <a href="hw5/makettable.html">Maket Table</a><br>
 
     
 </body>
