--- a/hw5/maketdiv.html
+++ b/hw5/maketdiv.html
@@ -10,9 +10,9 @@
 
   <div style="text-align: center;padding: 20px; background-color: lightskyblue;height: 45px; "> <span STYLE="color: blue; font-weight: bolder; font-size: x-large;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</span></div>
   <div>
-    <div style="width:25%;
+    <div style="width:25%;height: 100%;
     background-color: rgba(255, 255, 27, 0.712); 
-    float: left; overflow: hidden;">Виды спорта: 
+    float: left; overflow: hidden; padding: 0px;">Виды спорта: 
     <ul>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >конькобежный спорт</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >биатлон</a></li>
@@ -28,14 +28,14 @@
 
     </div>
 
-    <div style="width:75%; padding-left: 140px; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding-left: 260px;"> 
+    <div style="width: auto;height:auto ; padding-left: 140px; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding: 0px;"> 
       <h2 style="text-align:center ; margin: 0px;">Футбол</h2>
     
       <img src="people.png" style="float: left;">
       <p>Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта в мире.</p>
-    <p>Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p>
-  <div style="clear: both; "></div>
-  </div>
+      <p style= "margin:0px;">Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p>
+      <div style="clear: both; "></div>
+    </div>
   <div style="clear: both; height: 5px; background-color: black;"></div>
   </div>
   
