--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="hw4/560.html">5.60</a><br>
     <a href="hw4/ramka.html">Ramka</a>
     <a href="hw4/nocut.html">No cut</a>
+    <a href="hw4/cards.html">Cards</a>
     <h2>HTML/CSS 5</h2>
     <a href="hw5/maketdiv.html">Maket Div</a><br>
     <a href="hw5/makettable.html">Maket Table</a><br>
