--- a/hw4/cards.html
+++ b/hw4/cards.html
@@ -7,6 +7,43 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="cards.png">
+  <div style="background-image: url('cards2.png'); 
+    background-repeat: no-repeat;
+    background-position: -432px -1553px;
+    width: 140px ;
+    height: 188px;
+    border:solid red 1px"> 
+    </div>
+
+    <div style="background-image: url('cards2.png'); margin-left: 90px ; margin-top: -60px;
+    background-repeat: no-repeat;
+    background-position: -432px -1941px;
+    width: 140px ;
+    height: 188px;
+    border:solid red 1px"> 
+    </div>
+    
+    <div style="background-image: url('cards2.png'); margin-left: 180px ; margin-top: -60px;
+    background-repeat: no-repeat;
+    background-position: -288px -1359px;
+    width: 140px ;
+    height: 188px;
+    border:solid red 1px"> 
+    </div>   
+
+    <div style="background-image: url('cards2.png'); margin-left: 270px ; margin-top: -50px;
+    background-repeat: no-repeat;
+    background-position: -144px -2329px;
+    width: 140px ;
+    height: 188px;
+    border:solid red 1px"> </div>
+
+<div style="background-image: url('cards2.png'); margin-left: 360px ; margin-top: -40px;
+background-repeat: no-repeat;
+background-position: -288px -2523px;
+width: 140px ;
+height: 188px;
+border:solid red 1px"> 
+</div>   
 </body>
 </html>
