--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <a href= "hw1/diary1.html">diary </a> <span><strong>- checked</strong></span> <br>
     <a href= "hw1/vizbor.html">vizbor </a> <span><strong>- checked</strong></span><br>
     <a href= "hw1/1.2valid.html">1.2+ valid</a>
-    <h2>Childbook 2</h2>
+    <h2>HTML/CSS 2</h2>
     <a href="hw2/childbook.html">Child book </a> <span><strong>- checked</strong></span>
-    <h2>Fonts 3</h2>
+    <h2>HTML/CSS 3</h2>
     <a href="hw3/font/fonts.html">Fonts</a> <span><strong>- checked</strong></span><br>
     <a href="hw3/safe.html">Safe</a><br>
     <a href="hw3/font.html">Font</a>
     <h2>HTML/CSS 4</h2>
+    <a href="hw4/1tag.html">1Tag</a><br>
+    <a href="hw4/area.html">Area</a><br>
     <a href="hw4/560.html">5.60</a><br>
-    <a href="hw4/ramka.html">Ramka</a>
-    <a href="hw4/nocut.html">No cut</a>
+    <a href="hw4/ramka.html">Ramka</a><br>
+    <a href="hw4/nocut.html">No cut</a><br>
     <a href="hw4/cards.html">Cards</a>
     <h2>HTML/CSS 5</h2>
     <a href="hw5/maketdiv.html">Maket Div</a><br>
