--- a/hw4/area.html
+++ b/hw4/area.html
@@ -29,19 +29,19 @@
   </tr>
 </table>
 <br>
-<img src="48.png" alt="coords">
+<img src="img/48.png" alt="coords">
 <h2>Пример использования</h2>
 
-<img src = "map.png" usemap = "#figuri" alt = "Доступны 4 фигуры для выбора" >
+<img src = "img/map.png" usemap = "#figuri" alt = "Доступны 4 фигуры для выбора" >
 		<map name = "figuri" >
 			<area shape = "rect" coords = "25,25,125,125" href = "https://ru.wikipedia.org/wiki/%D0%9A%D0%B2%D0%B0%D0%B4%D1%80%D0%B0%D1%82" alt = "Красный квадрат" >
 			<area shape = "circle" coords = "200,75,50" href = "https://ru.wikipedia.org/wiki/%D0%9A%D1%80%D1%83%D0%B3,_%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B8%D1%87" alt = "Зелёный круг." >
 			<area shape = "poly" coords = "325,25,262,125,388,125" href = "https://ru.wikipedia.org/wiki/%D0%A2%D1%80%D0%B5%D1%83%D0%B3%D0%BE%D0%BB%D1%8C%D0%BD%D0%B8%D0%BA" alt = "Голубой треугольник" >
 			<area shape = "poly" coords = "450,25,435,60,400,75,435,90,450,125,465,90,500,75,465,60"  href = "https://ru.wikipedia.org/wiki/%D0%9F%D1%83%D0%B3%D0%B0%D1%87%D1%91%D0%B2%D0%B0,_%D0%90%D0%BB%D0%BB%D0%B0_%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2%D0%BD%D0%B0" alt = "Желтая звезда" >
  <ul> 
-  <li>Разместили изображение (тег <img>), которое мы в последствии будем использовать при составлении изображении-карты. В атрибуте usemap необходимо обязательно указать имя изображения-карты, которое мы будем использовать в элементе <map> (необходимо обязательно перед именем указать решетку).</li>
-  <li>Размещаем изображение-карту (тег <map>), задаем единственный и обязательный атрибут элемента name (имя). Обратите внимание, что в отличие от тега <img> мы задаем имя без решетки, в остальном они должны совпадать.</li>
-  <li>Размещаем четыре тега <area>, которые определяют интерактивные области в изображении-карте:</li>
+  <li>Разместили изображение (тег &lt;img&gt;), которое мы в последствии будем использовать при составлении изображении-карты. В атрибуте usemap необходимо обязательно указать имя изображения-карты, которое мы будем использовать в элементе &lt;map&gt; (необходимо обязательно перед именем указать решетку).</li>
+  <li>Размещаем изображение-карту (тег &lt;map&gt;), задаем единственный и обязательный атрибут элемента name (имя). Обратите внимание, что в отличие от тега &lt;img&gt; мы задаем имя без решетки, в остальном они должны совпадать.</li>
+  <li>Размещаем четыре тега &lt;area&gt;, которые определяют интерактивные области в изображении-карте:</li>
   <ul style="list-style-type: circle;">
     <li>Первой мы задаем прямоугольную область (атрибут shape со значением "rect" ), она соответствует нашему первому изображению (первые два значения соответствуют верхнему левому углу, следующие два значения определяют правый верхний и нижний угол).</li>
     <li>Второй указываем круглую область (атрибут shape со значением "circle" ), она соответствует нашему второму изображению (первое значение соответствует координатам по оси x, а второе по оси y, третее определяет радиус).</li>
