--- a/hw4/ramka.html
+++ b/hw4/ramka.html
@@ -7,14 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <div style="background: url('y.png') repeat-y  ; ">
-  <div style="background: url('x.png') repeat-x">
-  <div style="background: url('y11.png') repeat-x bottom ">
-    <div style="background: url('ynn.png') repeat-y right ; ">
-  <div style="background: url('bottomleft.png') left bottom no-repeat">
-  <div style="background: url('topleft.png') left top no-repeat ">
-  <div style="background: url('topright.png') right top no-repeat">
-  <div style="background: url('bottomright.png') right bottom no-repeat">
+  <div style="background: url('img/y.png') repeat-y  ; ">
+  <div style="background: url('img/x.png') repeat-x">
+  <div style="background: url('img/y11.png') repeat-x bottom ">
+    <div style="background: url('img/ynn.png') repeat-y right ; ">
+  <div style="background: url('img/bottomleft.png') left bottom no-repeat">
+  <div style="background: url('img/topleft.png') left top no-repeat ">
+  <div style="background: url('img/topright.png') right top no-repeat">
+  <div style="background: url('img/bottomright.png') right bottom no-repeat">
   
   <div style="padding: 50px;font-size: 15px; line-height:180%">  Бериллий — элемент главной подгруппы второй группы, второго периода периодической системы химических элементов Д. И. Менделеева, с атомным номером 4. Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент. Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
   </div>
