--- a/hw6/links.html
+++ b/hw6/links.html
@@ -36,8 +36,10 @@
     padding: 5px 10px 10px 10px;
     }
     .aft a{color: green;}
-
-
+   .midd a::after  { content: url('https://validator.w3.org/'); border-right: solid red;
+    }
+    .color a{color: green; padding: 5px 10px 10px 10px; }
+    .marg { margin-top: 30px; }
   </style>
 </head>
 <body>
@@ -57,11 +59,19 @@
   </div>
 
   <div class="aft hov">
-    <div><a href="https://validator.w3.org/">первая ссылка</a></div>
-    <div><a href="https://validator.w3.org/">вторая ссылка</a></div>
-    <div><a href="https://validator.w3.org/">третья ссылка</a></div>
-    <div><a href="https://validator.w3.org/">четвертая ссылка</a></div>
-    <div><a href="https://validator.w3.org/">пятая ссылка</a></div>
+    <div><a href="http://htmlbook.ru/samhtml/ssylki">первая ссылка</a></div>
+    <div><a href="http://htmlbook.ru/samhtml/ssylki">вторая ссылка</a></div>
+    <div><a href="http://htmlbook.ru/samhtml/ssylki">третья ссылка</a></div>
+    <div><a href="http://htmlbook.ru/samhtml/ssylki">четвертая ссылка</a></div>
+    <div><a href="http://htmlbook.ru/samhtml/ssylki">пятая ссылка</a></div>
+  </div>
+
+  <div class="midd hov color marg">
+    <a href="https://validator.w3.org/">первая ссылка</a>
+    <a href="https://validator.w3.org/">вторая ссылка</a>
+    <a href="https://validator.w3.org/">третья ссылка</a>
+    <a href="https://validator.w3.org/">четвертая ссылка</a>
+    <a href="https://validator.w3.org/">пятая ссылка</a>
   </div>
 </body>
 </html>
