--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <a href="hw5/maketdiv.html">Maket Div</a><br>
     <a href="hw5/makettable.html">Maket Table</a><br>
     <a href="hw5/ball.html">Ball 12</a><br>
-    
+    <h2>HTML/CSS 6</h2>
+    <a href="hw6/links.html">Links</a><br>
 </body>
 </html>
