--- a/hw4/notbefore.html
+++ b/hw4/notbefore.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    a:before{content:url('img/extref.png')}</style>
+ 
+    a {background-image: url('img/extref.png'); background-position: left; background-repeat:no-repeat; padding-left:13px;}</style>
 </head>
 <body>
   <p style="font-weight: bold; font-size:x-large ;" id="start"> Михаил Ботвинник </p>
