--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     <a href="hw5/ball.html">Ball 12</a><br>
     <h2>HTML/CSS 6</h2>
     <a href="hw6/links.html">Links</a><br>
+    <a href="hw4/560.html">Chess before</a><br>
+    <a href="hw4/notbefore.html">Chess not before</a><br>
+    <a href="hw6/mychess.html">CSS Chess</a><br>
+
 </body>
 </html>
