--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <a href="hw4/560.html">Chess before</a><br>
     <a href="hw4/notbefore.html">Chess not before</a><br>
     <a href="hw6/mychess.html">CSS Chess</a><br>
-
+    <a href="hw6/stars.html">Stars</a>
+    <h2>HTML/CSS 7</h2>
+ <a href="hw7/media.html">Adapt</a><br>
+ <a href="hw7/print.html">Print</a>
 </body>
 </html>
