--- a/hw8/maket_block.html
+++ b/hw8/maket_block.html
@@ -5,9 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+  
+  .fix {
+      width: 100px;
+      height: 60px;
+      background-color: lawngreen;
+      position: fixed;
+      
+      border-color: darkgreen;
+      border:solid ;
+      text-align: center;
+      z-index: 999;
+     right: 50px;
+     top: 50px;
+     padding-top: 20px;
+    }
+   
+
+  </style>
 </head>
 <body>
 <div class="all">
+  <div class="sticky">
+  <div class="fix">
+    <a href="https://ru.wikipedia.org/wiki/Футбол"><span>ВСТУПИТЬ В КЛУБ</span></a>
+  </div></div>
   <div style="text-align: center;padding: 20px; background-color: lightskyblue;height: 45px; "> <span STYLE="color: blue; font-weight: bolder; font-size: x-large;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</span></div>
   <div>
     <div style="width:25%;height: 100%;
@@ -25,17 +48,18 @@
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >шахматы</a></li>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >шашки</a></li>
     </ul>
+
     </div>
 
-    <div style="width: auto;height:auto ; padding-left: 140px; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding: 0px;"> 
+    <div style="width: auto;height:auto ; padding-left: 140px; background-image: url('/hw5/ball.png'); background-repeat: repeat-y ; background-position: right; padding: 0px;"> 
       <h2 style="text-align:center ; margin: 0px;">Футбол</h2>
     
-      <img src="people.png" style="float: left;">
+      <img src="/hw5/people.png" style="float: left;">
       <p>Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта в мире.</p>
       <p style= "margin:0px;">Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p>
       <div style="clear: both; "></div>
     </div>
-  
+  <div style="clear: both; height: 5px; background-color: black;"></div>
   </div>
   
   <div style="text-align: center;padding: 20px; background-color: lightskyblue; height: 60px; clear: both;"><P STYLE="color: blue; font-weight: bolder; font-size: x-large;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</P>
