--- a/hw5/maketdiv.html
+++ b/hw5/maketdiv.html
@@ -5,13 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    *{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    .fon{
+      background-color: yellow;
+    }
+   .white{
+    background-color: white;
+   }
+   
+  </style>
 </head>
 <body>
 <div class="all">
-  <div style="text-align: center;padding: 20px; background-color: lightskyblue;height: 45px; "> <span STYLE="color: blue; font-weight: bolder; font-size: x-large;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</span></div>
-  <div>
+  <div style="text-align: center;padding: 20px; background-color: lightskyblue;height: 45px; " class="span"> <span STYLE="color: blue; font-weight: bolder; font-size: x-large;">ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</span></div>
+  <div class="fon">
     <div style="width:25%;height: 100%;
-    background-color: rgba(255, 255, 27, 0.712); 
     float: left; overflow: hidden; padding: 0px;">Виды спорта: 
     <ul>
       <li><a href="https://ru.wikipedia.org/wiki/Футбол" >конькобежный спорт</a></li>
@@ -27,15 +40,16 @@
     </ul>
     </div>
 
-    <div style="width: auto;height:auto ; padding-left: 140px; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding: 0px;"> 
+    <div class="white" style="width: auto;height:auto ; margin-left: 25%; background-image: url('ball.png'); background-repeat: repeat-y ; background-position: right; padding: 0px;"> 
       <h2 style="text-align:center ; margin: 0px;">Футбол</h2>
     
       <img src="people.png" style="float: left;">
       <p>Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта в мире.</p>
       <p style= "margin:0px;">Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.</p>
-      <div style="clear: both; "></div>
+     <div style="clear: both;"></div> 
     </div>
-  
+    
+
   </div>
   
   <div style="text-align: center;padding: 20px; background-color: lightskyblue; height: 60px; clear: both;"><P STYLE="color: blue; font-weight: bolder; font-size: x-large;">ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</P>
