--- a/index.html
+++ b/index.html
@@ -10,32 +10,36 @@
     <h2>HTML/CSS 1</h2>
     <a href= "hw1/diary1.html">diary </a> <span><strong>- checked</strong></span> <br>
     <a href= "hw1/vizbor.html">vizbor </a> <span><strong>- checked</strong></span><br>
-    <a href= "hw1/1.2valid.html">1.2+ valid</a>
+    <a href= "hw1/1.2valid.html">1.2+ valid</a><span><strong>- checked</strong></span>
     <h2>HTML/CSS 2</h2>
     <a href="hw2/childbook.html">Child book </a> <span><strong>- checked</strong></span>
     <h2>HTML/CSS 3</h2>
     <a href="hw3/font/fonts.html">Fonts</a> <span><strong>- checked</strong></span><br>
-    <a href="hw3/safe.html">Safe</a><br>
-    <a href="hw3/font.html">Font</a>
+    <a href="hw3/safe.html">Safe</a><span><strong>- checked</strong></span><br>
+    <a href="hw3/font.html">Font</a><span><strong>- checked</strong></span>
     <h2>HTML/CSS 4</h2>
-    <a href="hw4/1tag.html">1Tag</a><br>
-    <a href="hw4/area.html">Area</a><br>
-    <a href="hw4/560.html">5.60</a><br>
-    <a href="hw4/ramka.html">Ramka</a><br>
+    <a href="hw4/1tag.html">1Tag</a><span><strong>- checked</strong></span><br>
+    <a href="hw4/area.html">Area</a><span><strong>- checked</strong></span><br>
+    <a href="hw4/560.html">5.60</a><span><strong>- checked</strong></span><br>
+    <a href="hw4/ramka.html">Ramka</a><span><strong>- checked</strong></span><br>
     <a href="hw4/nocut.html">No cut</a><br>
-    <a href="hw4/cards.html">Cards</a>
+    <a href="hw4/cards.html">Cards</a><span><strong>- checked</strong></span>
     <h2>HTML/CSS 5</h2>
-    <a href="hw5/maketdiv.html">Maket Div</a><br>
-    <a href="hw5/makettable.html">Maket Table</a><br>
+    <a href="hw5/maketdiv.html">Maket Div</a><span><strong>- fixed</strong></span><br>
+    <a href="hw5/makettable.html">Maket Table</a><span><strong>- checked</strong></span><br>
     <a href="hw5/ball.html">Ball 12</a><br>
     <h2>HTML/CSS 6</h2>
-    <a href="hw6/links.html">Links</a><br>
-    <a href="hw4/560.html">Chess before</a><br>
-    <a href="hw4/notbefore.html">Chess not before</a><br>
-    <a href="hw6/mychess.html">CSS Chess</a><br>
-    <a href="hw6/stars.html">Stars</a>
+    <a href="hw6/links.html">Links</a><span><strong>- checked</strong></span><br>
+    <a href="hw4/560.html">Chess before</a><span><strong>- checked</strong></span><br>
+    <a href="hw4/notbefore.html">Chess not before</a><span><strong>- checked</strong></span><br>
+    <a href="hw6/mychess.html">CSS Chess</a><span><strong>- checked</strong></span><br>
+    <a href="hw6/stars.html">Stars</a><span><strong>- fixed</strong></span>
     <h2>HTML/CSS 7</h2>
- <a href="hw7/media.html">Adapt</a><br>
- <a href="hw7/print.html">Print</a>
+ <a href="hw7/media.html">Adapt</a><span><strong>- checked</strong></span><br>
+ <a href="hw7/print.html">Print</a><span><strong>- checked</strong></span>
+ <h2>HTML/CSS 8</h2>
+ <a href="hw8/abs.html">Abs</a><br>
+ <a href="hw8/maket_block.html">Fix</a><br>
+ <a href="hw8/maket_form.html">Form</a>
 </body>
 </html>
