--- a/index.html
+++ b/index.html
@@ -41,5 +41,7 @@
  <a href="hw8/abs.html">Abs</a><br>
  <a href="hw8/maket_block.html">Fix</a><br>
  <a href="hw8/maket_form.html">Form</a>
+ <h2>HTML/CSS 8</h2>
+ <a href="hw9/gallery.html">Gallery</a><br>
 </body>
 </html>
