--- a/hw4/nocut.html
+++ b/hw4/nocut.html
@@ -7,10 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  <div style="background-image: url('1ramka.jpg'); height: 445px; width: 357px; background-repeat:no-repeat">
-  <div style="padding: 50px;font-size: 18px; line-height:180%">  Бериллий — элемент главной подгруппы второй группы, второго периода периодической системы химических элементов Д. И. Менделеева, с атомным номером 4. Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент. Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
+  <div style='border: solid 30px;
+  border-image-source: url("img/brdr.png");
+  border-image-slice: 30;
+  border-image-repeat: stretch'>
+   Бериллий — элемент главной подгруппы второй группы, второго периода периодической системы химических элементов Д. И. Менделеева, с атомным номером 4. Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент. Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
   </div>
-  </div>
-</div>
+  
+
 </body>
 </html>
