--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
  <a href="hw8/maket_form.html">Form</a>
  <h2>HTML/CSS 8</h2>
  <a href="hw9/gallery.html">Gallery</a><br>
+ <a href="hw9/maket_flex.html">Meket Flex</a><br>
+ <a href="hw9/maket_grid.html">Meket Grid</a><br>
+ <a href="hw9/sprite.html">Sprite</a><br>
+ <a href="hw9/anim_test.html">Test Animation</a><br>
+ <a href="hw9/svg.html">SVG</a><br>
+ <a href="hw9/image.html">Image</a><br>
 </body>
 </html>
