--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
  <a href="hw9/anim_test.html">Test Animation</a><br>
  <a href="hw9/svg.html">SVG</a><br>
  <a href="hw9/image.html">Image</a><br>
+ <h2>JS</h2>
+ <a href="js/anketa.html">Anketa</a><br>
+ <a href="js/if.html">Anketa If</a><br>
+ <a href="js/countries.html">Countries</a><br>
 </body>
 </html>
